--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "bootstrap": "^4.6.1",
+    "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap": "^5.3.3",
+    "luxon": "^3.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular/cli": "~15.0.1",
+    "@angular-devkit/build-angular": "^0.1101.2",
+    "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/luxon": "^3.4.2",
+    "@types/quill": "^2.0.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
