--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,15 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/quill/dist/quill.snow.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/quill/dist/quill.snow.css",
+
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
@@ -37,7 +41,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -89,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
