--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
   "name": "hello-world-fe",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.0.1.",
+  "main": "index.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "@auth0/angular-jwt": "^5.2.0",
-    "bootstrap": "^5.3.3",
-    "luxon": "^3.5.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ttphuong172/hello-world-fe.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ttphuong172/hello-world-fe/issues"
+  },
+  "homepage": "https://github.com/ttphuong172/hello-world-fe#readme",
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.2",
-    "@angular/cli": "^15.2.11",
-    "@angular/compiler-cli": "^15.0.0",
-    "@types/jasmine": "~4.3.0",
+    "@angular-devkit/build-angular": "^15.2.11",
     "@types/luxon": "^3.4.2",
-    "@types/quill": "^2.0.14",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "@types/quill": "^1.3.7",
+    "typescript": "4.9.x"
+  },
+  "dependencies": {
+    "@angular/animations": "^15.2.10",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/compiler-cli": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
+    "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap": "^4.6.0",
+    "luxon": "^3.5.0",
+    "ngx-quill": "^21.0.0",
+    "quill": "^1.3.7",
+    "rxjs": "^7.5.7"
   }
 }
