--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/router": "^15.2.10",
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^4.6.0",
+    "libphonenumber-js": "^1.12.9",
     "luxon": "^3.5.0",
     "ngx-quill": "^21.0.0",
     "quill": "^1.3.7",
